# jobwright

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  jobwright.config.example.yaml  pyproject.toml
.claude-plugin/: marketplace.json  plugin.json
.github/workflows/: ci.yml  publish.yml
adapters/platform/: airflow.md  databricks.md  dbt.md  snowflake_tasks.md
commands/: configure-workspace.md  onboard.md  scaffold-job.md  validate-job.md
docs/: PUBLISHING.md  architecture.md
examples/sample-airflow/: jobwright.config.yaml
examples/sample-airflow/dags/: demo_dag.py
examples/sample-databricks/: jobwright.config.yaml
examples/sample-databricks/databricks/job_definitions/prod/: JOB-1_Demo_Report.json
examples/sample-databricks/jobs/: JOBS.md  OBJECTS.md
examples/sample-databricks/jobs/JOB-1_Demo_Report/: claude.md  demo.py
examples/sample-databricks/jobs/graph/: JOB-1.md
examples/sample-databricks/jobs/objects/: ANALYTICS.VW_CUSTOMER.md  LEGACY_STORE.OLD_SNAPSHOT.md  STAGING.ORDERS.md
hooks/: deploy_safety.py  hooks.json  regenerate_jobs_index.py  session_start.sh
jobwright/: __init__.py  cli.py  config.py  jobsindex.py  policy.py  scaffolder.py  wizard.py
jobwright/_templates/job/: claude.md.j2  job_definition.json.j2  notebook_header.py.j2  task_definition.sql.j2
jobwright/_templates/repo/: AGENTS.md.j2
jobwright/tools/: __init__.py  check_dependency_vulns.py  check_notebook_syntax.py  job_doc_lint.py  schema_compliance.py  validate_job.py  validate_job_definitions.py
skills/architecture-audit/: SKILL.md
skills/build-jobs-index/: SKILL.md
skills/configure-workspace/: SKILL.md
skills/document-job/: SKILL.md  inspection.md
skills/onboard/: SKILL.md
skills/safe-deploy/: SKILL.md
skills/scaffold-job/: SKILL.md
skills/setup/: SKILL.md  adopt.md
skills/start-job/: SKILL.md  lifecycle.md
skills/triage-failure/: SKILL.md
skills/validate-job/: SKILL.md
tests/: test_graph_layer.py  test_phase0.py  test_phase1.py  test_phase2.py  test_phase3.py  test_review_fixes.py  test_review_fixes_overall.py  test_review_fixes_p2.py  test_review_fixes_p3.py  test_v2_ux.py
