[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[project]
name = "jobwright"
version = "0.1.4"
description = "Open-source AI layer for governing, validating, and safely shipping data-orchestration jobs (Databricks, Airflow, dbt, Snowflake Tasks) with Claude Code"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Kyle Chalmers" }]
keywords = ["databricks", "airflow", "dbt", "snowflake", "data-engineering", "orchestration", "claude-code", "governance", "ci"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Quality Assurance",
]
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "pyyaml>=6",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
    "pytest>=8",
    "pre-commit>=4",
]

[project.urls]
Homepage = "https://github.com/kyle-chalmers/jobwright"
Repository = "https://github.com/kyle-chalmers/jobwright"
Issues = "https://github.com/kyle-chalmers/jobwright/issues"

[project.scripts]
jobwright = "jobwright.cli:app"

[tool.hatch.build.targets.wheel]
# The PyPI wheel ships the jobwright/ package, including the Jinja scaffold templates
# under jobwright/_templates/ (non-.py files are included by default). The Claude Code
# plugin artifacts (adapters/, skills/, hooks/, .claude-plugin/) are distributed via the
# plugin marketplace (git), NOT the wheel — the guard reads destructive_patterns from the
# Python adapter classes (which ARE in the wheel), so the CLI works pip-installed alone.
packages = ["jobwright"]

[tool.ruff]
target-version = "py310"
line-length = 100
# examples/ holds sample *job code* (intentionally illustrative, not package code);
# _templates/ holds Jinja templates that aren't valid standalone Python.
extend-exclude = ["examples", "jobwright/_templates"]

[tool.ruff.lint]
# B008: Typer's idiom puts Option()/Argument() calls in parameter defaults.
select = ["E", "F", "I", "W", "UP", "B", "SIM"]
ignore = ["E501", "B008"]

[tool.pytest.ini_options]
testpaths = ["tests"]
